Updated the jupyterlab-day feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -70990,3 +70990,7 @@
 	url = https://github.com/conda-forge/bipedal-locomotion-framework-feedstock.git
 	path = feedstocks/bipedal-locomotion-framework
 	branch = refs/heads/main
+[submodule "jupyterlab-day"]
+	url = https://github.com/conda-forge/jupyterlab-day-feedstock.git
+	path = feedstocks/jupyterlab-day
+	branch = refs/heads/main
