Updated the loos feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -70994,3 +70994,7 @@
 	url = https://github.com/conda-forge/jupyterlab-day-feedstock.git
 	path = feedstocks/jupyterlab-day
 	branch = refs/heads/main
+[submodule "loos"]
+	url = https://github.com/conda-forge/loos-feedstock.git
+	path = feedstocks/loos
+	branch = refs/heads/main
