Updated the r-amap feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -11789,7 +11789,7 @@
 [submodule "r-amap"]
 	path = feedstocks/r-amap
 	url = https://github.com/conda-forge/r-amap-feedstock.git
-	branch = refs/heads/master
+	branch = refs/heads/main
 [submodule "r-aod"]
 	path = feedstocks/r-aod
 	url = https://github.com/conda-forge/r-aod-feedstock.git
