--- a/.gitmodules
+++ b/.gitmodules
@@ -71006,3 +71006,7 @@
 	url = https://github.com/conda-forge/molgrid-feedstock.git
 	path = feedstocks/molgrid
 	branch = refs/heads/main
+[submodule "jupyterlab-copy-relative-path"]
+	url = https://github.com/conda-forge/jupyterlab-copy-relative-path-feedstock.git
+	path = feedstocks/jupyterlab-copy-relative-path
+	branch = refs/heads/main
