Updated the nyxus feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71022,3 +71022,7 @@
 	url = https://github.com/conda-forge/minisom-feedstock.git
 	path = feedstocks/minisom
 	branch = refs/heads/main
+[submodule "nyxus"]
+	url = https://github.com/conda-forge/nyxus-feedstock.git
+	path = feedstocks/nyxus
+	branch = refs/heads/main
