Updated the nh3 feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71042,3 +71042,7 @@
 	url = https://github.com/conda-forge/denoptim-feedstock.git
 	path = feedstocks/denoptim
 	branch = refs/heads/main
+[submodule "nh3"]
+	url = https://github.com/conda-forge/nh3-feedstock.git
+	path = feedstocks/nh3
+	branch = refs/heads/main
