Updated the gz-launch feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71050,3 +71050,7 @@
 	url = https://github.com/conda-forge/optree-feedstock.git
 	path = feedstocks/optree
 	branch = refs/heads/main
+[submodule "gz-launch"]
+	url = https://github.com/conda-forge/gz-launch-feedstock.git
+	path = feedstocks/gz-launch
+	branch = refs/heads/main
