Updated the r-ravetools feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71082,3 +71082,7 @@
 	url = https://github.com/conda-forge/perl-test-differences-feedstock.git
 	path = feedstocks/perl-test-differences
 	branch = refs/heads/main
+[submodule "r-ravetools"]
+	url = https://github.com/conda-forge/r-ravetools-feedstock.git
+	path = feedstocks/r-ravetools
+	branch = refs/heads/main
