--- a/.gitmodules
+++ b/.gitmodules
@@ -71090,3 +71090,7 @@
 	url = https://github.com/conda-forge/r-gifti-feedstock.git
 	path = feedstocks/r-gifti
 	branch = refs/heads/main
+[submodule "r-filearray"]
+	url = https://github.com/conda-forge/r-filearray-feedstock.git
+	path = feedstocks/r-filearray
+	branch = refs/heads/main
