Updated the nanoid feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71166,3 +71166,7 @@
 	url = https://github.com/conda-forge/multitaper-feedstock.git
 	path = feedstocks/multitaper
 	branch = refs/heads/main
+[submodule "nanoid"]
+	url = https://github.com/conda-forge/nanoid-feedstock.git
+	path = feedstocks/nanoid
+	branch = refs/heads/main
