Updated the python-on-whales feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71174,3 +71174,7 @@
 	url = https://github.com/conda-forge/inflate64-feedstock.git
 	path = feedstocks/inflate64
 	branch = refs/heads/main
+[submodule "python-on-whales"]
+	url = https://github.com/conda-forge/python-on-whales-feedstock.git
+	path = feedstocks/python-on-whales
+	branch = refs/heads/main
