Updated the fica feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71182,3 +71182,7 @@
 	url = https://github.com/conda-forge/vl-convert-python-feedstock.git
 	path = feedstocks/vl-convert-python
 	branch = refs/heads/main
+[submodule "fica"]
+	url = https://github.com/conda-forge/fica-feedstock.git
+	path = feedstocks/fica
+	branch = refs/heads/main
