Updated the pyodide-py feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71210,3 +71210,7 @@
 	url = https://github.com/conda-forge/jsonnetfmt-feedstock.git
 	path = feedstocks/jsonnetfmt
 	branch = refs/heads/main
+[submodule "pyodide-py"]
+	url = https://github.com/conda-forge/pyodide-py-feedstock.git
+	path = feedstocks/pyodide-py
+	branch = refs/heads/main
