--- a/.gitmodules
+++ b/.gitmodules
@@ -71218,3 +71218,7 @@
 	url = https://github.com/conda-forge/fiatlux-feedstock.git
 	path = feedstocks/fiatlux
 	branch = refs/heads/main
+[submodule "micropip"]
+	url = https://github.com/conda-forge/micropip-feedstock.git
+	path = feedstocks/micropip
+	branch = refs/heads/main
