Updated the otter-grader feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71230,3 +71230,7 @@
 	url = https://github.com/conda-forge/perl-file-slurp-feedstock.git
 	path = feedstocks/perl-file-slurp
 	branch = refs/heads/main
+[submodule "otter-grader"]
+	url = https://github.com/conda-forge/otter-grader-feedstock.git
+	path = feedstocks/otter-grader
+	branch = refs/heads/main
