Updated the scikit-network feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71254,3 +71254,7 @@
 	url = https://github.com/conda-forge/perl-math-round-feedstock.git
 	path = feedstocks/perl-math-round
 	branch = refs/heads/main
+[submodule "scikit-network"]
+	url = https://github.com/conda-forge/scikit-network-feedstock.git
+	path = feedstocks/scikit-network
+	branch = refs/heads/main
