Updated the r-logitnorm feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71302,3 +71302,7 @@
 	url = https://github.com/conda-forge/r-ttservice-feedstock.git
 	path = feedstocks/r-ttservice
 	branch = refs/heads/main
+[submodule "r-logitnorm"]
+	url = https://github.com/conda-forge/r-logitnorm-feedstock.git
+	path = feedstocks/r-logitnorm
+	branch = refs/heads/main
