--- a/.gitmodules
+++ b/.gitmodules
@@ -71366,3 +71366,7 @@
 	url = https://github.com/conda-forge/perl-yaml-libyaml-feedstock.git
 	path = feedstocks/perl-yaml-libyaml
 	branch = refs/heads/main
+[submodule "perl-yaml"]
+	url = https://github.com/conda-forge/perl-yaml-feedstock.git
+	path = feedstocks/perl-yaml
+	branch = refs/heads/main
