Updated the perl-spiffy feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71370,3 +71370,7 @@
 	url = https://github.com/conda-forge/perl-yaml-feedstock.git
 	path = feedstocks/perl-yaml
 	branch = refs/heads/main
+[submodule "perl-spiffy"]
+	url = https://github.com/conda-forge/perl-spiffy-feedstock.git
+	path = feedstocks/perl-spiffy
+	branch = refs/heads/main
