Updated the reals feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71378,3 +71378,7 @@
 	url = https://github.com/conda-forge/perl-test-base-feedstock.git
 	path = feedstocks/perl-test-base
 	branch = refs/heads/main
+[submodule "reals"]
+	url = https://github.com/conda-forge/reals-feedstock.git
+	path = feedstocks/reals
+	branch = refs/heads/main
