Updated the r-onesamplemr feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71398,3 +71398,7 @@
 	url = https://github.com/conda-forge/jupyter_server_fileid-feedstock.git
 	path = feedstocks/jupyter_server_fileid
 	branch = refs/heads/main
+[submodule "r-onesamplemr"]
+	url = https://github.com/conda-forge/r-onesamplemr-feedstock.git
+	path = feedstocks/r-onesamplemr
+	branch = refs/heads/main
