--- a/.gitmodules
+++ b/.gitmodules
@@ -71414,3 +71414,7 @@
 	url = https://github.com/conda-forge/r-rjsoncons-feedstock.git
 	path = feedstocks/r-rjsoncons
 	branch = refs/heads/main
+[submodule "r-redux"]
+	url = https://github.com/conda-forge/r-redux-feedstock.git
+	path = feedstocks/r-redux
+	branch = refs/heads/main
